# fastapi-boilerplate

./: .env  .gitignore  .pre-commit-config.yaml  README.md  gunicorn.conf.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  start_server.sh  stop_server.sh
app/: main.py
app/api/v1/endpoints/: auth.py  users.py
app/api/v1/routers/: entry.py
app/api/v1/schemas/: auth.py  common_validators.py  user.py
app/api/v1/schemas/common/: request_filter.py
app/constants/: filter_items.py
app/core/: logging.py
app/databases/: models.py  redis.py  session.py
app/repositories/auth/: auth_repository.py
app/repositories/users/: user_repository.py
app/services/auth/: auth_service.py
app/services/users/: user_service.py
app/utils/: cache_manager.py  data_transform_utils.py  date_utils.py  error_class.py  error_handler.py  file_utils.py  jwt_utils.py  pagination.py  password_policy.py  password_utils.py  path_utils.py  response_utils.py  types.py
app/utils/filter_utils/: filter_base_schema.py  filter_class.py  filter_data_recode.py  filter_param_utils.py
